--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -202,10 +202,6 @@
     top: 114px;
     font-size: 12px;
   }
-
-  .play-button {
-    border-width: $main-button-half-size 0 $main-button-half-size $main-button-size;
-  }
   
   .pause-button {
     height: 11.28px;
